[tool.poetry]
name = "compute_graph"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python=">=3.7,<3.11"
sympy = "^1.9"
graphviz = "^0.19.1"
pycparser = "^2.21"
Jinja2 = "^3.0.3"
parameterized = "^0.8.1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
build-ast = "compute_graph.AST.build_ast:main"